client/src/assets/scss/style.scss
/* Eggshell */

$background: #EDEDED;
$line: #D5D5D5;

$white:#fff;
$purple:#3a5bb2;
$darkpurple:#30324d;
$blue:#2196F3;
$background: #EDEDED;
$light: #ededed;
$black: #4D4D4D;
$read: #FF4136;
$font: 'Roboto', Arial, sans;
$break-small: 770px;
$break-large: 1240px;
$linkColorWhite:#fff #ddd!default;
$linkColorBlue:#399bef #308fe0!default;
$table-line: #CFD8DC;
@import 'eggshell';
@import '_responsive';
// @import '_fonts';
/* Layout */

$header: 2.5*$gutter;
$sidebar: 470px;
$menu: 300px;
$avatar: 24px;
$width: 1040px;
$thin: 700px;
$create: 400px;
$newmenu: 100px;
$newwidth: 1024px;
$newcreate: 400px;
$newradius:50px;
$lightgrey:#9e9e9e;
$red:#e55555;
/* GENERAL */



html, body {
    // height: 100%;
    width: 100%;

    overflow-x: hidden;
    letter-spacing: .3px;
}
body {
  color: $black;
  position: relative;
  font-family: "icomoon","jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
  letter-spacing: -0.02em;
  font-weight: 400;
  font-style: normal;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-feature-settings: "liga" on;
}
/* Forms */

label {
    color: tint($black, 20%);
    display: block;
    text-transform: none;
    input {
        color: $black;
        display: block;
        @include font-size();
    }
}
input:not([type=submit]), textarea {
    background: transparent;
    border: 0;
    border-bottom: 1px solid tint($line, 5%);
    border-radius: 0;
    padding: $gutter/4 0;
    @include transition-property(border);
    @include transition-duration(0.2s);
    &:hover {
        background: transparent;
        border-bottom-color: $line;
    }
    &:active, &:focus {
        background: transparent;
        border-bottom-color: $blue;

    }
    &[disabled], &[disabled=disabled], &[disabled=true], &[disabled], &[readonly=true], &[readonly=readonly], &[readonly] {
        border-bottom-color: tint($line, 10%);
        color: $line;
        &:active, &:focus, &:hover {
            background: transparent;
            border-bottom-color: tint($line, 10%);
        }
    }
    &.error {
        border-bottom-color: $red;
    }
}
::-webkit-input-placeholder {
   color: #d5d5d5;
}

:-moz-placeholder { /* Firefox 18- */
   color: #d5d5d5;
}

::-moz-placeholder {  /* Firefox 19+ */
   color: #d5d5d5;
}

:-ms-input-placeholder {
   color: #d5d5d5;
}


.hide{display:none}
body.loading{
        &:before,&:after{position:fixed!important;}

}

.field {
    span,label{
        @include font-size($normal)
    }
    textarea{
        float: left;
        width: 100%;
        height: 100px;
        @include font-size($normal);
        resize: none;
    }
    label{margin-bottom:$gutter;}
    margin-bottom: $gutter;
    position: relative;
    &.readonly {
        // &:before {
        //     @include icon;
        //     bottom: $gutter/4;
        //     color: $grey;
        //     content: 'r';
        //     @include font-size();
        //     right: 0px;
        //     position: absolute;
        // }
    }
}
.select {
    &:after {
        top: $gutter/4;
        right: $gutter/4;
        @include font-size(20);
    }
    select {
        border: 0;
        border-radius: 0;
        padding: $gutter/4 0;
        padding-right: 1.5*$gutter;
        @include font-size($smaller+1);
        color:$grey;
        width: $create+$newmenu;
        //  @include tablet{
        //     width:100%;
        // }
        option{
            float: left;
            width: auto;

        }
        &:active, &:focus {
            background: transparent;
            border-bottom-color: $blue;
        }
    }
}

/* Buttons */

.button, a.button, button.button {
    @include button($background, true);
    font-size: inherit;
    line-height: 140%;
    padding: $gutter/4 $gutter/2;
    text-transform: none;
    &.primary {
        @include button($blue);
    text-transform: uppercase!important;
    border:none!important;
    @include box-shadow(0px 1px 5px rgba(0, 0, 0, 0.09));


    }
    &.secondary {
        @include button($green);
    text-transform: uppercase!important;

    }
    &.remove {
      float: right;
      font-size: 14px!important;
      text-transform: uppercase;
      margin: $gutter/2+2;
      width: auto!important;
      height: $gutter+16;
      border:none;
      background: none!important;
      box-shadow:none;
      color:$red!important;
      padding:0px!important;
      margin:0px;
      &:hover{
          background:none;
          color: shade($black, 40%);
      }
    }
    &.primary, &.secondary{
        font-size: inherit;
        line-height: 140%;
        padding: $gutter/4 $gutter/2;
        text-transform: none;
    }
}

img.avatar {
  float: left;
  margin-right: $gutter/4;
  width: 24px;
  height: 24px;
  border-radius:50%;
  margin-right:$gutter/2;
}

.hide {
  display: none !important;
}

/* HEADER */

#header {
  background: #FFF;
  height: $header;
  @include box-shadow(0 0 1px rgba(0,0,0,0.15));
  left: 0;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 6;
  text-align: center;
  .user{
    float: right;
    height: 24px;
    line-height: 24px;
    margin:12px;
    color:$black;
    span{
      float: left;
      margin-right: $gutter/2;
    }
    &:hover{
      color: #000;
    }
  }
  .logo {
    margin: 0 auto;
    text-align: center;
  }
  h1 {
      @include font-size($larger+4);
      line-height: 1;
      padding: $gutter/2+2;
      height: $gutter+16;
      line-height:  $gutter+16;
      margin:0px;
      font-weight: bolder;
  }

}
/* ... */

